--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Lato', Helvetica,arial !important;
+  font-size:10vw;
 
 }
 a{
