--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Lato', Helvetica,arial !important;
-  font-size:10vw;
 
 }
 a{
@@ -14,7 +13,7 @@ h1,h2,h3,h4,h5,h6{
 font-family: 'Rokkitt', Helvetica, arial !important;
 }
 .container{
-  width: 930px !important;
+  width: 925px !important;
   position: relative;
   opacity: 0.95;
 }
@@ -39,15 +38,19 @@ body{
   text-indent: 30px;
 }
 .profilepic{
-  max-width: 100px;
-
+  /*max-width: 100px;*/
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .profilepic img{
   width:180px;
   height:180px;
   border-radius: 50%;
   object-fit: cover;
-  margin-left: 12%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .content{
       box-shadow: 10px 10px 5px 5px#888888;
