--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -692,6 +692,12 @@ img[height] {
   margin-bottom: 0;
 }
 
+.grid-one [class*="o-grid__col"] {
+  width: 50%;
+  padding-right: 3.5rem;
+  margin-bottom: 0;
+}
+
 .o-grid__col-xs-1 {
   -ms-flex: 0 0 auto;
       flex: 0 0 auto;
