--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1717,7 +1717,31 @@ img[height] {
     margin-left: auto;
   }
 }
-
+.video {
+  width: 100%;
+  border: 1px solid black;
+}
+.wrapper{
+  display:table;
+  width:auto;
+  position:relative;
+  width:100%;
+}
+.playpause {
+  background: url(../images/play.png) rgba(0,0,0,0.6);
+  background-repeat:no-repeat;
+  width:100%;
+  height:100%;
+  cursor: pointer;
+  position:absolute;
+  left:0%;
+  right:0%;
+  top:0%;
+  bottom:0%;
+  margin:auto;
+  background-size: auto;
+  background-position: center;
+}
 .o-section__header-bg,
 .o-section__content-bg {
   display: none;
