--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2672,7 +2672,7 @@ div.ball {
 
 .loader-1 .loader-outter {
   position: absolute;
-  border: 4px solid #f50057;
+  border: 4px solid #e0a80d;
   border-left-color: transparent;
   border-bottom: 0;
   width: 100%;
@@ -2684,7 +2684,7 @@ div.ball {
 
 .loader-1 .loader-inner {
   position: absolute;
-  border: 4px solid #f50057;
+  border: 4px solid #e0a80d;
   border-radius: 50%;
   width: 40px;
   height: 40px;
