--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2478,8 +2478,8 @@ div.ball {
 .case_study .o-section__description {
   /* font: normal normal medium 30px/40px Helvetica Neue; */
   letter-spacing: 0px;
-  font-size: 20px;
-  line-height: 40px;
+  font-size: 18px;
+  line-height: 30px;
   opacity: 1;
 }
 
@@ -2488,7 +2488,14 @@ div.ball {
   height: -webkit-fill-available;
 
 }
-
+.w-100{
+  width: 100%;
+}
+.case-study-banner{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
 .case-study-details h3 {
   /* font: normal normal medium 26px/40px Helvetica Neue; */
   letter-spacing: 0px;
@@ -2536,12 +2543,12 @@ div.ball {
 .case_study p {
   padding-top: 30px;
   color: #A4A5A6;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 30px;
 }
 .case-study-details p{
   padding-top: 10px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .case_study .started_btn {
@@ -2553,11 +2560,10 @@ div.ball {
   opacity: 1;
   font-size: 17px;
   display: inline-block;
-  /* padding: 30px; */
-  width: 171px;
+  width: 140px;
   margin-top: 30px;
-  height: 50px;
-  line-height: 50px;
+  height: 47px;
+  line-height: 47px;
   text-align: center;
 }
 
