--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2478,7 +2478,7 @@ div.ball {
 .case_study .o-section__description {
   /* font: normal normal medium 30px/40px Helvetica Neue; */
   letter-spacing: 0px;
-  font-size: 18px;
+  font-size: 1.22rem;
   line-height: 30px;
   opacity: 1;
 }
@@ -2510,7 +2510,7 @@ div.ball {
   color: #FFFFFF;
   opacity: 1;
   text-transform: capitalize;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .case-study-details ul {
@@ -2523,7 +2523,7 @@ div.ball {
   letter-spacing: 0px;
   color: #DDDDDD;
   opacity: 1;
-  font-size: 16px;
+  font-size: 1.22rem;
   line-height: 30px;
 }
 .case-study-details h2{
@@ -2542,21 +2542,23 @@ div.ball {
 
 .case_study .bold_title {
   color: #A4A5A6;
-  padding-top: 30px;
-  font-size: 80px;
+  padding-top: 10px;
+ 
+  font-size: 42px;
   font-weight: bold;
-  line-height: 74px;
+  line-height: normal;
+
 }
 
 .case_study p {
   padding-top: 30px;
   color: #A4A5A6;
-  font-size: 16px;
+  font-size: 1.22rem;
   line-height: 30px;
 }
 .case-study-details p{
   padding-top: 10px;
-  font-size: 16px;
+  font-size: 1.22rem;
 }
 
 .case_study .started_btn {
@@ -2594,7 +2596,7 @@ div.ball {
 }
 
 .case-study-details {
-  padding: 60px 0;
+  padding: 60px 0 0px;
 }
 
 .case-study-wrapper {
@@ -3168,4 +3170,8 @@ div.ball {
 }
 .banner-animation{
   height: 100vh;
+
+  display: flex;
+  align-items: center;
+
 }
