--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2473,24 +2473,15 @@ div.ball {
 
 
 
-/* .case-study-details .o-section__content {
-  padding: 4.375rem 5.25rem 1.6625rem;
-} */
-
 .case_study .o-section__description {
-  /* font: normal normal medium 30px/40px Helvetica Neue; */
   letter-spacing: 0px;
-  font-size: 1.22rem;
-  line-height: 30px;
-  opacity: 1;
+  font-size: 1rem;
 }
 .case_study_list{
   padding-top: 30px;
 }
 .c-main-container {
-
   height: -webkit-fill-available;
-
 }
 .case_study_img{
   border-radius: 5px;
@@ -2501,18 +2492,15 @@ div.ball {
 .case-study-banner{
   height: 100vh;
   display: flex;
-
   overflow: hidden;
-
   align-items: center;
 }
 .case-study-details h3 {
-  /* font: normal normal medium 26px/40px Helvetica Neue; */
   letter-spacing: 0px;
   color: #FFFFFF;
   opacity: 1;
   text-transform: capitalize;
-  font-size: 1.2rem;
+  font-size: 1.22rem;
 }
 
 .case-study-details ul {
@@ -2521,11 +2509,10 @@ div.ball {
 }
 
 .case-study-details li {
-  /* font: normal normal normal 24px/50px Helvetica Neue; */
   letter-spacing: 0px;
   color: #DDDDDD;
   opacity: 1;
-  font-size: 1.22rem;
+  font-size: 1rem;
   line-height: 30px;
 }
 .case-study-details h2{
@@ -2539,32 +2526,28 @@ div.ball {
 
 .case_study .o-section--header {
   padding: 0px;
-
 }
 
 .case_study .bold_title {
   color: #A4A5A6;
   padding-top: 10px;
- 
-  font-size: 42px;
+  font-size: 1.2rem;
   font-weight: bold;
   line-height: normal;
-
 }
 
 .case_study p {
-  padding-top: 30px;
+  padding-top: 10px;
   color: #A4A5A6;
-  font-size: 1.22rem;
-  line-height: 30px;
 }
 .case-study-details p{
-  padding-top: 10px;
-  font-size: 1.22rem;
+  /* padding-top: 10px;
+  font-size: 1.22rem; */
 }
-
-.case_study .started_btn {
-  /* font: normal normal bold 17px/34px Helvetica Neue; */
+.mt-50{
+  margin-top: 50px;
+}
+.started_btn {
   letter-spacing: 0px;
   color: #FFFFFF;
   background: transparent linear-gradient(261deg, #F41C88 0%, #5DFFF9 100%) 0% 0% no-repeat padding-box;
@@ -2588,12 +2571,9 @@ div.ball {
 }
 
 .case_study .main-heading {
-
   line-height: 90px;
-
   text-transform: capitalize;
-
-  font-size: 90px;
+  font-size: 4.8rem;
   font-weight: 800;
 }
 
@@ -2604,8 +2584,6 @@ div.ball {
 .case-study-wrapper {
   background: #A49ABC;
   border-radius: 20px 0 0 20px;
-  /* padding: 0px 0 30px; */
-  opacity: 1;
   display: flex;
 }
 
@@ -2620,8 +2598,7 @@ div.ball {
 
 .case-study-wrapper h6 {
   text-align: left;
-  /* font: normal normal medium 20px/40px Helvetica Neue; */
-  font-size: 20px;
+  font-size: 1.2rem;
   letter-spacing: 0px;
   color: #FFFFFF;
   font-weight: normal;
@@ -2629,24 +2606,21 @@ div.ball {
 }
 
 .case-study-wrapper h2 {
-  /* font: normal normal bold 80px/100px Helvetica Neue; */
-
-  font-size: 60px;
+  /* font-size: 60px; */
   font-weight: bold;
-  line-height: 80px;
+  /* line-height: 80px; */
   text-transform: capitalize;
   letter-spacing: 0px;
   color: #DDDDDD;
   opacity: 1;
 }
-
+.case-study-banner .banner_description{
+  line-height: 30px;
+}
 .case-study-wrapper h4 {
   text-align: left;
-  /* font: normal normal medium 30px/40px Helvetica Neue; */
-
-  font-size: 20px;
+  font-size: 1.2rem;
   line-height: 30px;
-
   letter-spacing: 0px;
   color: #DDDDDD;
   opacity: 1;
