--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 2 */
 }
-
+@import "new.css";
 /**
  * Remove default margin.
  */
@@ -2414,6 +2414,13 @@ div.ball {
   margin-bottom: 1.75rem;
   margin-top: 0px;
 }
+.o-content__body br{
+  display: none;
+}
+.c-intr1o p{
+  max-width: 90%;
+  margin: 0 auto;
+}
 }
 
 @media (min-width: 760px) {
@@ -2452,4 +2459,769 @@ div.ball {
 
 .desktop-video {
   height: 225px;
+}
+
+
+
+
+@media (min-width: 1024px) {
+
+  .case_study .o-section__header {
+    text-align: left;
+    width: 50%;
+    padding-right: 30px !important;
+  }
+  
+  .case_study .o-section__content {
+    width: 50%;
+  }
+ 
+}
+
+
+
+.separtor_line{
+  /* border-bottom: 0.5px solid #404040; */
+}
+.dark_bg{
+  background : #101010;
+}
+
+.case_study .o-section__description {
+  letter-spacing: 0px;
+  font-size: 1rem;
+}
+.text-center{
+  text-align: center;
+}
+/* .opacity_1{
+  opacity: 1!important;
+} */
+.case_study_list{
+ 
+  /* padding-bottom: 40px;
+  margin-bottom: 40px; */
+
+}
+/* .c-main-container {
+  height: -webkit-fill-available;
+} */
+.case_study_img{
+  border-radius: 5px;
+  margin: 40px 0;
+}
+.w-100{
+  width: 100%;
+}
+.case-study-banner{
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+}
+.case-study-details h3 {
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  opacity: 1;
+  text-transform: capitalize;
+  font-size: 1.22rem;
+}
+
+.case-study-details ul {
+  list-style: none;
+  margin-left: 0;
+}
+.flex_column{
+  flex-direction: column;
+}
+.mt-30{
+  margin-top: 30px;
+}
+.case-study-details .w-100{
+  width: 100%;
+}
+  .fw-bold{
+    font-weight: bold;
+  }
+  .pt-30{
+    padding-top: 30px;
+  }
+  .mb-30{
+    margin-bottom: 30px;
+  }
+.case-study-details li {
+  letter-spacing: 0px;
+  color: #DDDDDD;
+  opacity: 1;
+  font-size: 1rem;
+  line-height: 30px;
+}
+.case-study-details h2{
+  color: #fff;
+  text-transform: capitalize;
+}
+
+.case_study .o-section__description span {
+  color: #fff;
+}
+
+.case_study .o-section--header {
+  padding: 0px;
+}
+.line_section .o-content{
+  padding-bottom: 0;
+}
+.line_section .separtor_line{
+  padding-bottom: 0;
+}
+.line_section .last_grid{
+
+  padding-bottom: 60px;
+
+}
+.mt-50{
+  padding-top: 50px;
+}
+.case_study .bold_title {
+  color: #A4A5A6;
+  padding-top: 10px;
+  font-size: 4.3rem;
+  font-weight: bold;
+  line-height: normal;
+}
+.index_heading{
+  font-size: 40px;
+
+  letter-spacing: 10px;
+
+}
+
+.case_study p {
+  padding-top: 10px;
+  color: #A4A5A6;
+}
+
+.mt-50{
+  margin-top: 50px;
+}
+.started_btn {
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  background: transparent linear-gradient(261deg, #F41C88 0%, #5DFFF9 100%) 0% 0% no-repeat padding-box;
+  border-radius: 3px;
+  opacity: 1;
+  font-size: 13px;
+  display: inline-block;
+  width: 100px;
+  margin-top: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.pt-0 {
+  padding-top: 0 !important;
+}
+
+.p-0 {
+  padding: 0;
+}
+
+.case_study .main-heading {
+  line-height: 90px;
+  text-transform: capitalize;
+  font-size: 4.8rem;
+  font-weight: 800;
+}
+
+.case-study-details {
+  padding: 60px 0 0px;
+}
+
+.case-study-wrapper {
+  background: #A49ABC;
+  border-radius: 20px 0 0 20px;
+  display: flex;
+}
+
+.case-study-wrapper .left-content {
+  padding: 30px;
+  width: 50%;
+}
+
+.case-study-wrapper .right-content {
+  width: 50%;
+}
+
+.case-study-wrapper h6 {
+  text-align: left;
+  font-size: 1.2rem;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  font-weight: normal;
+  opacity: 1;
+}
+.design_title{
+  font-size: 1.5rem;
+}
+
+.case-study-wrapper h2 {
+  font-size: 3.2rem;
+  font-weight: bold;
+  /* line-height: 80px; */
+  text-transform: capitalize;
+  letter-spacing: 0px;
+  color: #DDDDDD;
+  opacity: 1;
+}
+.case-study-banner .banner_description{
+  line-height: 30px;
+}
+.case-study-wrapper h4 {
+  text-align: left;
+  font-size: 1.2rem;
+  line-height: 30px;
+  letter-spacing: 0px;
+  color: #DDDDDD;
+  opacity: 1;
+  font-weight: normal;
+}
+
+.details-content .o-section__header {
+  font-size: 26px;
+}
+.gradient_one{
+  background: linear-gradient(98deg, #F443CB 0%, #B2FFFF 100%) ;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.gradient_two{
+  background: linear-gradient(263deg, #F41C88 0%, #5DFFF9 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.gradient_three{
+  background: linear-gradient(100deg, #F443CB 0%, #B2FFFF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+}
+
+.loader {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin: 75px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.loader-star {
+  position: absolute;
+  top: calc(50% - 12px);
+}
+/*LOADER-1*/
+
+.loader-1 .loader-outter {
+  position: absolute;
+  border: 4px solid #e0a80d;
+  border-left-color: transparent;
+  border-bottom: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
+}
+
+.loader-1 .loader-inner {
+  position: absolute;
+  border: 4px solid #e0a80d;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
+  border-right: 0;
+  border-top-color: transparent;
+  -webkit-animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
+}
+@-webkit-keyframes loader-1-outter {
+  0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+
+@keyframes loader-1-outter {
+  0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loader-1-inner {
+  0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(-360deg);
+      transform: rotate(-360deg);
+  }
+}
+
+@keyframes loader-1-inner {
+  0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(-360deg);
+      transform: rotate(-360deg);
+  }
+}
+
+
+
+.floating-images {
+  position: relative;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  will-change: opacity, transform;
+  -webkit-animation-name: heroImg;
+  animation-name: heroImg;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+.floating-images__container {
+  height: 360px;
+}
+@media screen and (min-width: 768px) {
+  .floating-images__container {
+      height: 570px;
+  }
+}
+@media screen and (min-width: 375px) {
+  .floating-images {
+      width: 360px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-images {
+      width: 550px;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .floating-images {
+      width: 530px;
+  }
+}
+.floating-image .image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+.floating-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  will-change: transform;
+}
+.floating-image:nth-child(1) {
+  width: 45px;
+  height: 33.75px;
+  left: auto;
+  right: 40px;
+  top: 0;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(1) {
+      width: 50px;
+      height: 37.5px;
+      left: auto;
+      right: 47px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(1) {
+      width: 70px;
+      height: 52.5px;
+      top: 0;
+      right: 70;
+      left: auto;
+  }
+}
+.floating-image:nth-child(2) {
+  width: 65px;
+  height: 48.75px;
+  left: auto;
+  right: 120px;
+  top: 5px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -5s;
+  animation-delay: -5s;
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(2) {
+      width: 70px;
+      height: 52.5px;
+      left: auto;
+      right: 134px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(2) {
+      width: 100px;
+      height: 75px;
+      top: 7px;
+      right: 205px;
+      left: auto;
+  }
+}
+.floating-image:nth-child(3) {
+  width: 78px;
+  height: 58.5px;
+  left: auto;
+  right: 20px;
+  top: 70px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -3s;
+  animation-delay: -3s;
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(3) {
+      width: 83px;
+      height: 62.25px;
+      left: auto;
+      right: 30px;
+      top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(3) {
+      width: 120px;
+      height: 90px;
+      top: 93px;
+      right: 40px;
+      left: auto;
+  }
+}
+.floating-image:nth-child(4) {
+  width: 98px;
+  height: 73.5px;
+  left: auto;
+  right: 0;
+  top: 264px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -4.5s;
+  animation-delay: -4.5s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(4) {
+      width: 103px;
+      height: 77.25px;
+      right: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(4) {
+      width: 150px;
+      height: 112.5px;
+      left: auto;
+      right: 0;
+      top: 376px;
+  }
+}
+.floating-image:nth-child(5) {
+  width: 60px;
+  height: 45px;
+  left: 30px;
+  right: auto;
+  top: 347px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -1.8s;
+  animation-delay: -1.8s;
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(5) {
+      width: 65px;
+      height: 48.75px;
+      top: 347px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(5) {
+      width: 90px;
+      height: 67.5px;
+      top: 504px;
+      left: 75px;
+      right: auto;
+  }
+}
+.floating-image:nth-child(6) {
+  width: 98px;
+  height: 73.5px;
+  left: auto;
+  right: 60px;
+  top: 25px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -1.6s;
+  animation-delay: -1.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(6) {
+      width: 103px;
+      height: 77.25px;
+      left: auto;
+      right: 60px;
+      top: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(6) {
+      width: 150px;
+      height: 112.5px;
+      top: 37px;
+      left: auto;
+      right: 95px;
+  }
+}
+.floating-image:nth-child(7) {
+  width: 124px;
+  height: 93px;
+  left: 10px;
+  right: auto;
+  top: 144px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -3.6s;
+  animation-delay: -3.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(7) {
+      width: 129px;
+      height: 96.75px;
+      left: 30px;
+      right: auto;
+      top: 144px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(7) {
+      width: 190px;
+      height: 142.5px;
+      left: 45px;
+      right: auto;
+      top: 222px;
+  }
+}
+.floating-image:nth-child(8) {
+  width: 130px;
+  height: 97.5px;
+  left: 60px;
+  right: auto;
+  top: 272px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -5.6s;
+  animation-delay: -5.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(8) {
+      width: 135px;
+      height: 101.25px;
+      left: 60px;
+      top: 272px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(8) {
+      width: 200px;
+      height: 150px;
+      top: 388px;
+      left: auto;
+      right: 210px;
+  }
+}
+.floating-image:nth-child(9) {
+  width: 118px;
+  height: 88.5px;
+  left: 90px;
+  right: auto;
+  top: 90px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(9) {
+      width: 123px;
+      height: 92.25px;
+      left: 90px;
+      top: 90px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(9) {
+      width: 180px;
+      height: 135px;
+      top: 123px;
+      left: 145px;
+      right: auto;
+  }
+}
+.floating-image:nth-child(10) {
+  width: 156px;
+  height: 117px;
+  left: auto;
+  right: 40px;
+  top: 170px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -6.6s;
+  animation-delay: -6.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(10) {
+      width: 161px;
+      height: 120.75px;
+      left: auto;
+      top: 160px;
+      right: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(10) {
+      width: 240px;
+      height: 180px;
+      top: 232px;
+      right: 40px;
+      left: auto;
+  }
+}
+.floating-image:nth-child(11) {
+  width: 130px;
+  height: 97.5px;
+  left: 0;
+  right: auto;
+  top: 10px;
+  transition: 0.3s;
+  -webkit-animation: float 6s alternate infinite ease-in-out;
+  animation: float 6s alternate infinite ease-in-out;
+  -webkit-animation-delay: -2.6s;
+  animation-delay: -2.6s;
+}
+@media screen and (min-width: 375px) {
+  .floating-image:nth-child(11) {
+      width: 135px;
+      height: 101.25px;
+      left: 0;
+      top: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .floating-image:nth-child(11) {
+      width: 200px;
+      height: 150px;
+      top: 18px;
+      left: 0;
+  }
+}
+@-webkit-keyframes float {
+  0% {
+      -webkit-transform: translateY(10px) rotate3d(0, 0, 0, 0deg);
+      transform: translateY(10px) rotate3d(0, 0, 0, 0deg);
+  }
+  to {
+      -webkit-transform: translateY(-10px) rotate3d(0, 0, 0, 0deg);
+      transform: translateY(-10px) rotate3d(0, 0, 0, 0deg);
+  }
+}
+@keyframes float {
+  0% {
+      -webkit-transform: translateY(10px) rotate3d(0, 0, 0, 0deg);
+      transform: translateY(10px) rotate3d(0, 0, 0, 0deg);
+  }
+  to {
+      -webkit-transform: translateY(-10px) rotate3d(0, 0, 0, 0deg);
+      transform: translateY(-10px) rotate3d(0, 0, 0, 0deg);
+  }
+}
+
+
+.align-center{
+  align-items: center;
+}
+.banner-animation{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 1023px) {
+  .case-study-banner{
+    display: inline-block;
+  }  
+  .case_study .main-heading{
+    font-size: 30px;
+  }
+  .case-study-wrapper{
+    display: unset;
+  }
+  .case-study-wrapper .left-content, .case-study-wrapper .right-content{
+    width: 100%;
+    padding: 20px;
+  }
 }
